Apllied DRY on css codes

--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,21 @@
 }
 .container{
   max-width: 1000px;
-  margin: auto;
   justify-content: center;
 }
 .nav{
-  margin: auto;
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
   background: #21222A;
   height: 90px;
-  padding: 0 27px;
+}
+.nav, .main, .container{
+  margin: auto;
+}
+.nav, .main{
+  width: 100%;
+  padding: 0 30px;
 }
 .logo-brand{
   display:inline-flex;
@@ -40,7 +43,7 @@
   margin: auto;
   width: 100%;
   background: #282D35;
-  padding: 60px 30px;
+  padding-top:60px;
   color: #fff;
   background-image: url("../src/images/react-icon-large.png");
   background-repeat: no-repeat;
