--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,15 @@
   font-size: 1.5rem;
   color: #61DAFB;
 }
+.squares{
+  margin-top:30px;
+  background-color: #61DAFB;
+  padding: 10px;
+}
+.box {
+  display: inline-block;
+  margin-right: 20px;
+  height: 100px;
+  width: 100px;
+  border: 2px solid gray;
+}
