--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,9 @@
   color: #61DAFB;
 }
 .squares{
-  margin-top:30px;
-  padding: 10px;
+  margin-top:20px;
+  display: inline-block;
+  background-color:white;
 }
 .box {
   display: inline-block;
