--- a/src/App.css
+++ b/src/App.css
@@ -78,4 +78,8 @@
   width: 120px;
   border-radius: 5px;
   border: 2px solid #282D35;
+  margin-top: 20px;
+}
+.box:active {
+  transform: none;
 }
